--- a/build.gradle
+++ b/build.gradle
@@ -29,5 +29,12 @@ repositories {
 dependencies {
 	compile('org.projectlombok:lombok')
 	compile('org.springframework.boot:spring-boot-starter-web')
+
+	compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.1.1")
+
+	runtime("mysql:mysql-connector-java")
+
+
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
